--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <p>Css</p><progress max="100" value="0"></progress>
           </div>
           <div>
-            <p>Javascript</p><progress max="100" value="0"></progress>
+            <p>JS</p><progress max="100" value="0"></progress>
           </div>
         </div>
         <div id="col2">
