Upgraded a lotta stuff

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
         </div>
         <br><br>
         <div>
-          <p>Self-motivated developer, who is willing to learn and create outstanding UI applications.</p>
+          <p>Self-motivated frontend web developer.</p>
           <br>
-          <p>Donec aliquam est dui, vel vestibulum diam sollicitudin id. Quisque feugiat malesuada molestie.</p>
+          <p>Yeah I know what you're thinking. <br><b>WOLVERINE!!!!</b><br>Don't worry it's not real 🙂. It's just Photoshopped by me.</p>
         </div>
       </div>
     </div>
@@ -40,10 +40,10 @@
       <div class="skills">
         <div id="col1">
           <div>
-            <p>Html</p><progress max="100" value="0"></progress>
+            <p>HTML</p><progress max="100" value="0"></progress>
           </div>
           <div>
-            <p>Css</p><progress max="100" value="0"></progress>
+            <p>CSS</p><progress max="100" value="0"></progress>
           </div>
           <div>
             <p>JS</p><progress max="100" value="0"></progress>
@@ -57,7 +57,7 @@
             <p>Vue</p><progress max="100" value="0"></progress>
           </div>
           <div>
-            <p>Redux</p><progress max="100" value="0"></progress>
+            <p>Bootstrap</p><progress max="100" value="0"></progress>
           </div>
         </div>
       </div>
@@ -123,7 +123,7 @@
         <br>
         <h1>Recipe Page</h1>
         <br>
-        <p>Learnt <a href="https://animate.style">animate.css</a> while making this project</p>
+        <p>Learnt <a href="https://animate.style" style="text-decoration: none;color:blue">animate.css</a> while making this project</p>
         <br>
         <a class="demo" href="https://recipe-page-by-msn.netlify.app">Demo</a>
         <a class="code" href="https://github.com/msn-05/recipe-page">Code</a>
